# scribed

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
_modules/: index.html  scribed.html
_modules/scribed/: base.html  catalog.html  credentials.html  install.html  make_backend.html  registry.html  services.html  status.html  tools.html  translation.html  util.html
_modules/scribed/backends/_template/: adapter.html
_modules/scribed/backends/assemblyai/: adapter.html
_modules/scribed/backends/deepgram/: adapter.html
_modules/scribed/backends/elevenlabs/: adapter.html
_modules/scribed/backends/faster_whisper/: adapter.html
_modules/scribed/backends/google_speech/: adapter.html
_modules/scribed/backends/groq/: adapter.html
_modules/scribed/backends/openai/: adapter.html
_modules/scribed/backends/vosk/: adapter.html
_modules/scribed/backends/whisper/: adapter.html
_modules/scribed/backends/whispercpp/: adapter.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: scribed.rst.txt
_sources/module_docs/scribed/: __main__.rst.txt  backends.rst.txt  base.rst.txt  catalog.rst.txt  credentials.rst.txt  install.rst.txt  make_backend.rst.txt  registry.rst.txt  services.rst.txt  status.rst.txt  tools.rst.txt  translation.rst.txt  util.rst.txt
_sources/module_docs/scribed/backends/: _template.rst.txt  assemblyai.rst.txt  deepgram.rst.txt  elevenlabs.rst.txt  faster_whisper.rst.txt  google_speech.rst.txt  groq.rst.txt  openai.rst.txt  vosk.rst.txt  whisper.rst.txt  whispercpp.rst.txt
misc/docs/: asr_landscape_research.md  transcription_centralization_design.md
module_docs/: scribed.html
module_docs/scribed/: __main__.html  backends.html  base.html  catalog.html  credentials.html  install.html  make_backend.html  registry.html  services.html  status.html  tools.html  translation.html  util.html
module_docs/scribed/backends/: _template.html  assemblyai.html  deepgram.html  elevenlabs.html  faster_whisper.html  google_speech.html  groq.html  openai.html  vosk.html  whisper.html  whispercpp.html
module_docs/scribed/backends/_template/: adapter.html  config.html
module_docs/scribed/backends/assemblyai/: adapter.html  config.html
module_docs/scribed/backends/deepgram/: adapter.html  config.html
module_docs/scribed/backends/elevenlabs/: adapter.html  config.html
module_docs/scribed/backends/faster_whisper/: adapter.html  config.html
module_docs/scribed/backends/google_speech/: adapter.html  config.html
module_docs/scribed/backends/groq/: adapter.html  (+1 more)
scribed/: __init__.py  __main__.py  audio.py  base.py  catalog.py  credentials.py  install.py  make_backend.py  registry.py  services.py  status.py  streaming.py  testing.py  tools.py  translation.py  util.py  vad.py
scribed/backends/: __init__.py
scribed/backends/_template/: __init__.py  adapter.py  config.py
scribed/backends/assemblyai/: __init__.py  adapter.py  config.py
scribed/backends/deepgram/: __init__.py  adapter.py  config.py
scribed/backends/elevenlabs/: __init__.py  adapter.py  config.py
scribed/backends/faster_whisper/: __init__.py  adapter.py  config.py
scribed/backends/google_speech/: __init__.py  adapter.py  config.py
scribed/backends/groq/: __init__.py  adapter.py  config.py
scribed/backends/openai/: __init__.py  adapter.py  config.py
scribed/backends/vosk/: __init__.py  adapter.py  config.py
scribed/backends/whisper/: __init__.py  adapter.py  config.py
scribed/backends/whispercpp/: __init__.py  adapter.py  config.py
scribed/data/: SCHEMA.md  backends.json
tests/: test_openai_backend.py  test_scribed.py  test_streaming.py  util.py
(+34 files in other folders)
