[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "scribed"
version = "0.0.1"
description = "One facade over many speech-to-text (ASR) engines, plus a ledger to help you choose between them."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "speech-to-text",
    "asr",
    "transcription",
    "facade",
    "whisper",
    "audio-to-text",
]
authors = [
    { name = "Thor Whalen" },
]
dependencies = []

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/scribed"
Repository = "https://github.com/thorwhalen/scribed"
Documentation = "https://thorwhalen.github.io/scribed"

[project.scripts]
scribed = "scribed.__main__:main"

[project.optional-dependencies]
# --- per-backend extras (install only what you use) ---
# local / open-source engines
faster-whisper = ["faster-whisper>=1.0"]
whisper = ["openai-whisper>=20231117"]
whispercpp = ["pywhispercpp>=1.2"]
vosk = ["vosk>=0.3.45"]
# cloud / API engines
openai = ["openai>=1"]
groq = ["groq>=0.11"]
deepgram = ["deepgram-sdk>=3,<4"]  # adapter targets the v3 REST API (listen.rest.v("1")); v4+ support is a follow-up
assemblyai = ["assemblyai>=0.30"]
google = ["google-cloud-speech>=2.21"]
elevenlabs = ["elevenlabs>=1.0"]
# --- feature extras ---
cli = ["argh>=0.30", "argcomplete>=3"]  # the `scribed` command
audio = ["soundfile>=0.12", "numpy>=1.23"]  # audio loading / normalization helpers
table = ["pandas>=1.5"]  # catalog.to_dataframe()
# --- dev/docs ---
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.hatch.build.targets.wheel]
# Ship the package including the ledger data files (data/*.json, *.csv, *.md),
# the bundled skills, and the backend template that scaffold_backend reads.
packages = ["scribed"]

[tool.hatch.build.targets.sdist]
include = ["scribed", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
